# smart-mini-crt-interface

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  Pipfile  api.py  const.py  crt_tv.py  gui.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci_deployment.yml
service/: crt_api.service  crt_gui.service  fan_controller.service  install.sh  internal_conditions_reporter.service  smart_mini_crt_interface.service
smart_mini_crt_interface/: main.py
smart_mini_crt_interface/models/: __init__.py  artwork_image.py  crt_tv.py
src/: api.py  artwork_image.py  const.py  crt_tv.py  fan_controller.py  gui.py
src/application/controller/: fan_controller.py  gui.py  internal_conditions_reporter.py
src/application/handler/: mqtt.py
src/domain/model/: artwork_image.py  const.py  crt_tv.py
systemctl/: crt_api.service  crt_gui.service
