[tool.poetry]
name = "smart-mini-crt-interface"
version = "0.1.0"
description = ""
authors = ["Will Garside <worgarside@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "*"
pigpio = "*"
pychromecast = "*"
pillow = "*"
requests = "*"
tk = "*"
flask = "*"
python-kasa = "==0.6.0.1"
wg-utilities = {extras = ["devices-dht22"], version = "^3.11.3"}
paho-mqtt = "*"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pylint = "<4.0.0"
pre-commit = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | Pipfile\.lock
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["_local_sandbox"]
show_error_codes = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
mypy_path= "src"

[tool.codespell]
skip = '*.json,*.csv,*.xml,*.svg,*.lock'

[tool.pycln]
path = "*"
expand_stars = true
all = true
no_gitignore = false

[tool.ruff]
# Longer line length to avoid throwing errors in case where black doesn't
# wraps the lines (e.g. a long URL).
line-length = 120
extend-select = [
    # https://github.com/charliermarsh/ruff#supported-rules
    "B011", # DoNotAssertFalse
    "B014", # DuplicateHandlerException
    "B025", # DuplicateTryBlockException
    "D100", # PublicModule
    "D101", # PublicClass
    "D102", # PublicMethod
    "D103", # PublicFunction
    "D104", # PublicPackage
    "D106", # PublicNestedClass
    "D200", # FitsOnOneLine
    "D201", # NoBlankLineBeforeFunction
    "D205", # BlankLineAfterSummary
    "D206", # IndentWithSpaces
    "D207", # NoUnderIndentation
    "D208", # NoOverIndentation
    "D209", # NewLineAfterLastParagraph
    "D210", # NoSurroundingWhitespace
    "D211", # NoBlankLineBeforeClass
    "D212", # MultiLineSummaryFirstLine
    "D214", # SectionNotOverIndented
    "D300", # UsesTripleQuotes
    "D402", # NoSignature
    "D403", # FirstLineCapitalized
    "D405", # CapitalizeSectionName
    "D410", # BlankLineAfterSection
    "D411", # BlankLineBeforeSection
    "D412", # NoBlankLinesBetweenHeaderAndContent
    "D414", # NonEmptySection
    "D415", # EndsInPunctuation
    "D416", # SectionNameEndsInColon
    "D417", # DocumentAllArguments
    "D418", # SkipDocstring
    "D419", # NonEmpty
    "N801", # InvalidClassName
    "N802", # InvalidFunctionName
    "N803", # InvalidArgumentName
    "N804", # InvalidFirstArgumentNameForClassMethod
    "N805", # InvalidFirstArgumentNameForMethod
    "N807", # DunderFunctionName
    "N811", # ConstantImportedAsNonConstant
    "N812", # LowercaseImportedAsNonLowercase
    "N813", # CamelcaseImportedAsLowercase
    "N814", # CamelcaseImportedAsConstant
    "N817", # CamelcaseImportedAsAcronym
]
